--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "jscs": "jscs -c .jscsrc bin common examples",
+    "jscs": "jscs -c .jscsrc -m 1000 bin examples",
     "test": "npm run jscs"
   },
   "repository": {
