--- a/.jscsrc
+++ b/.jscsrc
@@ -1,7 +1,11 @@
 {
   "excludeFiles": [
     "./**/*.min.js",
-    "examples/landmarks/js/visua11y.js"
+    "examples/landmarks/js/visua11y.js",
+    "examples/landmarks/js/SkipTo.min.js",
+    "examples/landmarks/js/bootstrap-accessibility.min.js",
+    "examples/landmarks/js/bootstrap.min.js",
+    "examples/landmarks/js/jquery-2.1.1.min.js"
   ],
   "disallowKeywords": ["with"],
   "disallowMixedSpacesAndTabs": true,
