disallow operators before a newline.

--- a/.jscsrc
+++ b/.jscsrc
@@ -12,6 +12,23 @@
   "disallowMultipleLineBreaks": true,
   "disallowMultipleSpaces": true,
   "disallowNewlineBeforeBlockStatements": true,
+  "disallowOperatorBeforeLineBreak": [
+    "?",
+    "+",
+    "-",
+    "/",
+    "*",
+    "==",
+    "===",
+    "!=",
+    "!==",
+    ">",
+    ">=",
+    "<",
+    "<=",
+    "||",
+    "&&"
+  ],
   "disallowQuotedKeysInObjects": false,
   "disallowSpaceAfterObjectKeys": true,
   "disallowSpaceAfterPrefixUnaryOperators": ["++", "--", "~", "!"],
@@ -40,20 +57,7 @@
   "requireLineFeedAtFileEnd": true,
   "requireLineBreakAfterVariableAssignment": true,
   "requireOperatorBeforeLineBreak": [
-    "?",
-    "=",
-    "+",
-    "-",
-    "/",
-    "*",
-    "==",
-    "===",
-    "!=",
-    "!==",
-    ">",
-    ">=",
-    "<",
-    "<="
+    "="
   ],
   "requireParenthesesAroundIIFE": true,
   "requireSemicolons": true,
