--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "jscs": "jscs -c .jscsrc -m 1000 --fix bin examples" ,
+    "jscs-fix": "jscs -c .jscsrc -m 1000 --fix bin examples" ,
     "jscs-test": "jscs -c .jscsrc -m 1000 bin examples",
     "test": "npm run jscs-test"
   },
