Changes to JSCS spacing rules
modified:   .jscsrc based on discussion in November 28, 2016 Authoring Practices teleconference.
We agree to experiment with allowing multiple spaces and allow spaces after object keys
to allow for alignment  that is intended to improve readability.
Rationale: the purpose of the code is primarily pedigogical.

--- a/.jscsrc
+++ b/.jscsrc
@@ -10,7 +10,7 @@
   "disallowKeywords": ["with"],
   "disallowMixedSpacesAndTabs": true,
   "disallowMultipleLineBreaks": true,
-  "disallowMultipleSpaces": true,
+  "disallowMultipleSpaces": false,
   "disallowNewlineBeforeBlockStatements": true,
   "disallowOperatorBeforeLineBreak": [
     "?",
@@ -30,7 +30,7 @@
     "&&"
   ],
   "disallowQuotedKeysInObjects": false,
-  "disallowSpaceAfterObjectKeys": true,
+  "disallowSpaceAfterObjectKeys": false,
   "disallowSpaceAfterPrefixUnaryOperators": ["++", "--", "~", "!"],
   "disallowSpaceBeforePostfixUnaryOperators": ["++", "--"],
   "disallowSpacesInCallExpression": true,
