Exclude highlight.js from jscs

--- a/.jscsrc
+++ b/.jscsrc
@@ -5,7 +5,8 @@
     "examples/landmarks/js/SkipTo.min.js",
     "examples/landmarks/js/bootstrap-accessibility.min.js",
     "examples/landmarks/js/bootstrap.min.js",
-    "examples/landmarks/js/jquery-2.1.1.min.js"
+    "examples/landmarks/js/jquery-2.1.1.min.js",
+    "examples/js/highlight.pack.js"
   ],
   "disallowKeywords": ["with"],
   "disallowMixedSpacesAndTabs": true,
