--- a/.vnurc
+++ b/.vnurc
@@ -5,3 +5,6 @@
 Bad value “” for attribute “aria-activedescendant” on element “ul”:.*
 # Ignoring for Slider examples because it is forcing rule with role=img
 An “img” element must have an “alt” attribute, except under certain conditions. For details, consult guidance on providing text alternatives for images.
+# Ignoring aria-posinset and aria-setsize on role row
+Attribute “aria-posinset” not allowed on element “tr” at this point.
+Attribute “aria-setsize” not allowed on element “tr” at this point.
