--- a/.vnurc
+++ b/.vnurc
@@ -8,3 +8,5 @@ An “img” element must have an “alt” attribute, except under certain cond
 # Ignoring aria-posinset and aria-setsize on role row
 Attribute “aria-posinset” not allowed on element “tr” at this point.
 Attribute “aria-setsize” not allowed on element “tr” at this point.
+# Deleted Section Archive
+The “longdesc” attribute on the “img” element is obsolete. Use a regular “a” element to link to the description.
