--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "fix": "eslint --fix .",
     "lint": "eslint .",
-    "vnu-jar": "java -jar node_modules/vnu-jar/build/dist/vnu.jar --errors-only --filterfile .vnurc --no-langdetect examples/**/*.html",
+    "vnu-jar": "java -jar node_modules/vnu-jar/build/dist/vnu.jar --errors-only --filterfile .vnurc --no-langdetect --skip-non-html *.html examples/",
     "test": "npm run lint && npm run vnu-jar"
   },
   "repository": {
@@ -24,6 +24,6 @@
   "homepage": "https://github.com/w3c/aria-practices#readme",
   "devDependencies": {
     "eslint": "^4.19.1",
-    "vnu-jar": "^18.3.0"
+    "vnu-jar": "^18.7.23"
   }
 }
