--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ stages:
 jobs:
   include:
     - stage: Test
+      script: ava -c 1 test/tests
+    - stage: Test
       name: JS Linting
       script: npm run lint
     - stage: Test
