Regression Tests: Add test infra and tests for 27 example pages (pull #895)
Add Aava.js regression test infra and tests for 27 example pages:

alert.js
breadcrumb.js
button.js
checkbox-1.js
checkbox-2.js
combobox-autocomplete-both.js
combobox-autocomplete-list.js
combobox-autocomplete-none.js
dialog.js
disclosure-faq.js
grid-combo.js
LayoutGrids.js
link.js
listbox-combo.js
listbox-scrollable.js
menu-button-actions.js
menubar-2.js
radio-1.js
slider-1.js
table.js
tabs.js
toolbar.js
treegrid-1.js
treeview-1a.js
treeview-1b.js
treeview-2a.js
treeview-2b.js

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: node_js
 node_js:
   - "node"
 
+addons:
+  firefox: "60.0.2"
+
 git:
   depth: 3
 
@@ -11,6 +14,9 @@ stages:
 - Deploy
 jobs:
   include:
+    - stage: Test
+      name: AVA Regression Tests
+      script: ava --tap -c 1 test/tests
     - stage: Test
       name: JS Linting
       script: npm run lint
@@ -27,3 +33,6 @@ jobs:
         script: /tmp/deploy/travis-deploy.sh
         on:
           branch: master
+
+env:
+  - TEST_WAIT_TIME=1000
