--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fix": "eslint --fix .",
     "lint": "eslint .",
     "regression": "ava test/tests",
+    "regression-report": "node test/util/report",
     "test": "npm run lint && npm run vnu-jar && npm run regression",
     "vnu-jar": "java -jar node_modules/vnu-jar/build/dist/vnu.jar --errors-only --filterfile .vnurc --no-langdetect --skip-non-html *.html examples/"
   },
@@ -25,12 +26,10 @@
   "homepage": "https://github.com/w3c/aria-practices#readme",
   "devDependencies": {
     "ava": "^0.25.0",
+    "cheerio": "^1.0.0-rc.2",
     "eslint": "^4.19.1",
     "geckodriver": "^1.11.0",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "vnu-jar": "^18.7.23"
-  },
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.2"
   }
 }
