--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ jobs:
     - stage: Test
       name: AVA Regression Tests
       script: ava --tap -c 1 test/tests
-    - stage: Test Coverage
+    - stage: Test
       name: Regression Tests Coverage Report
       script: node test/util/report.js
     - stage: Test
