Change output from tap to ava default

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
   include:
     - stage: Test
       name: AVA Regression Tests
-      script: ava --tap -c 1 test/tests
+      script: ava -c 1 test/tests
     - stage: Test
       name: JS Linting
       script: npm run lint
