--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "fix": "eslint --fix .",
-    "lint": "eslint .",
+    "lint": "npm run lint:es && npm run lint:css",
+    "lint:css": "stylelint .",
+    "lint:es": "eslint .",
     "regression": "ava test/tests",
     "test": "npm run lint && npm run vnu-jar && npm run regression",
     "vnu-jar": "java -jar node_modules/vnu-jar/build/dist/vnu.jar --errors-only --filterfile .vnurc --no-langdetect --skip-non-html *.html examples/"
@@ -28,6 +30,7 @@
     "eslint": "^4.19.1",
     "geckodriver": "^1.11.0",
     "selenium-webdriver": "^4.0.0-alpha.1",
+    "stylelint": "^9.8.0",
     "vnu-jar": "^18.7.23"
   }
 }
