--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "geckodriver": "^1.11.0",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "stylelint": "^9.8.0",
+    "stylelint-config-standard": "^18.2.0",
     "vnu-jar": "^18.7.23"
   }
 }
