add css linting to pipeline

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,9 @@ jobs:
       name: CSS Linting
       script: npm run lint:css
     - stage: Test
+      name: CSS Linting
+      script: npm run lint:css
+    - stage: Test
       name: JS Linting
       script: npm run lint:es
     - stage: Test
