add css linting to pipeline

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,11 @@ jobs:
       name: AVA Regression Tests
       script: ava --tap -c 1 test/tests
     - stage: Test
+      name: CSS Linting
+      script: npm run lint:css
+    - stage: Test
       name: JS Linting
-      script: npm run lint
+      script: npm run lint:es
     - stage: Test
       name: HTML Linting
       script: npm run vnu-jar
