--- a/package.json
+++ b/package.json
@@ -31,9 +31,20 @@
     "cheerio": "^1.0.0-rc.2",
     "eslint": "^4.19.1",
     "geckodriver": "^1.11.0",
+    "husky": "^1.2.0",
+    "lint-staged": "^8.1.0",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "stylelint": "^9.8.0",
     "stylelint-config-standard": "^18.2.0",
     "vnu-jar": "^18.7.23"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.css": ["stylelint --fix", "git add"],
+    "*.js": ["eslint --fix", "git add"]
   }
 }
