--- a/scripts/reference-tables.template
+++ b/scripts/reference-tables.template
@@ -5,10 +5,10 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <title>Index of ARIA Examples</title>
   <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
-  <link rel="stylesheet" href="examples/css/core.css">
-  <script src="examples/js/examples.js"></script>
-  <script src="examples/js/highlight.pack.js"></script>
-  <script src="examples/js/app.js"></script>
+  <link rel="stylesheet" href="css/core.css">
+  <script src="js/examples.js"></script>
+  <script src="js/highlight.pack.js"></script>
+  <script src="js/app.js"></script>
 </head>
 <body>
   <nav>
