--- a/package.json
+++ b/package.json
@@ -44,7 +44,13 @@
     }
   },
   "lint-staged": {
-    "*.css": ["stylelint --fix", "git add"],
-    "*.js": ["eslint --fix", "git add"]
+    "*.css": [
+      "stylelint --fix",
+      "git add"
+    ],
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
