Regression test project: final changes and updates (pull #926)
Incorporate final set of changes from 2018 Bocoup contract:
* Add tests for radio/radio-2/radio-2.html
* Add tests for listbox/listbox-rearrangeable.html
* Add missing radio-2 test
* Report: Account for no missing tests
* rename Combobox test files
* Add missing test names
* Remove debug related log messages

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,10 @@ jobs:
   include:
     - stage: Test
       name: AVA Regression Tests
-      script: ava --tap -c 1 test/tests
+      script: ava -c 1 test/tests
+    - stage: Test
+      name: Regression Tests Coverage Report
+      script: node test/util/report.js
     - stage: Test
       name: JS Linting
       script: npm run lint
