--- a/scripts/reference-tables.template
+++ b/scripts/reference-tables.template
@@ -11,12 +11,18 @@
   <script src="js/app.js"></script>
 </head>
 <body>
-  <nav aria-label="Top link to ARIA Practices">
+  <nav aria-label="ARIA Practices">
     <a href="../">WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 
   <main>
     <h1>Index of ARIA Design Pattern Examples</h1>
+    
+    <p>
+      This page includes the following indexes of example implementations of 
+      <a href="../#aria_ex">ARIA design patterns</a> included in the 
+      <a href="../">WAI-ARIA Authoring Practices 1.1.</a>
+    </p>
 
     <ul>
       <li><a href="#examples_by_role_label">Examples by Role</a></li>
@@ -57,7 +63,7 @@
     </section>
 
   </main>
-  <nav aria-label="Bottom link to ARIA Practices">
+  <nav aria-label="ARIA Practices">
     <a href="../">WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 </body>
