index.template: minor editorial revision

--- a/scripts/reference-tables.template
+++ b/scripts/reference-tables.template
@@ -19,8 +19,8 @@
     <h1>Index of ARIA Design Pattern Examples</h1>
     
     <p>
-      This page includes the following indexes of example implementations of 
-      <a href="../#aria_ex">ARIA design patterns</a> included in the 
+      This page includes the following indexes of example implementations of
+      <a href="../#aria_ex">ARIA design patterns</a> included in
       <a href="../">WAI-ARIA Authoring Practices 1.1.</a>
     </p>
 
