update fix & lint scripts to run all related scripts

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "example": "examples"
   },
   "scripts": {
-    "fix": "eslint --fix .",
-    "lint": "npm run lint:es && npm run lint:css",
+    "fix": "npm run lint:es -- --fix && npm run lint:css -- --fix",
+    "lint": "npm run lint:es && npm run lint:css && npm run vnu-jar",
     "lint:css": "stylelint **/*.css",
     "lint:es": "eslint .",
     "lint:js": "npm run lint:es",
