update js linting script in ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
       script: npm run lint:css
     - stage: Test
       name: JS Linting
-      script: npm run lint
+      script: npm run lint:es
     - stage: Test
       name: HTML Linting
       script: npm run vnu-jar
