Travis CI: Enable deploy to continue when tests we consider informational fail (pull #993)
To address issue #992, In .travis.yml:
* add initial allow_failures flag and apply it to regression test coverage report job.
* only set environment variables where necessary.
* reorganize jobs for readability.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,13 @@ git:
 stages:
 - Test
 - Deploy
+
 jobs:
+  fast_finish: true
+  allow_failures:
+    - env: ALLOW_FAILURE=true
+
   include:
-    - stage: Test
-      name: AVA Regression Tests
-      script: ava -c 1 test/tests
-    - stage: Test
-      name: Regression Tests Coverage Report
-      script: node test/util/report.js
     - stage: Test
       name: CSS Linting
       script: npm run lint:css
@@ -29,6 +28,16 @@ jobs:
     - stage: Test
       name: HTML Linting
       script: npm run vnu-jar
+
+    - stage: Test
+      name: AVA Regression Tests
+      script: ava -c 1 test/tests
+      env: TEST_WAIT_TIME=1000
+    - stage: Test
+      name: Regression Tests Coverage Report
+      script: node test/util/report.js
+      env: ALLOW_FAILURE=true
+
     - stage: Deploy
       if: branch = master AND type != pull_request
       script: skip
@@ -39,6 +48,3 @@ jobs:
         script: /tmp/deploy/travis-deploy.sh
         on:
           branch: master
-
-env:
-  - TEST_WAIT_TIME=1000
