--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cheerio": "^1.0.0-rc.2",
     "eslint": "^4.19.1",
     "geckodriver": "^1.16.2",
+    "glob": "^7.1.4",
     "husky": "^1.2.0",
     "lint-staged": "^8.1.6",
     "selenium-webdriver": "^4.0.0-alpha.1",
