Abandened: Was merge from master into apg-1.1 but now into a temp throwaway branch (#1086)

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint:html": "npm run vnu-jar",
     "regression": "ava test/tests",
     "regression-report": "node test/util/report",
-    "test": "npm run lint && npm run vnu-jar && npm run regression",
+    "test": "npm run lint && npm run regression",
     "vnu-jar": "java -jar node_modules/vnu-jar/build/dist/vnu.jar --errors-only --filterfile .vnurc --no-langdetect --skip-non-html *.html examples/"
   },
   "repository": {
@@ -32,9 +32,10 @@
     "ava": "^0.25.0",
     "cheerio": "^1.0.0-rc.2",
     "eslint": "^4.19.1",
-    "geckodriver": "^1.11.0",
+    "geckodriver": "^1.16.2",
+    "glob": "^7.1.4",
     "husky": "^1.2.0",
-    "lint-staged": "^8.1.0",
+    "lint-staged": "^8.1.6",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "stylelint": "^9.8.0",
     "stylelint-config-standard": "^18.2.0",
