--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,6 @@ language: node_js
 node_js:
   - "node"
 
-addons:
-  firefox: "60.0.2"
-
 git:
   depth: 3
 
@@ -31,6 +28,8 @@ jobs:
 
     - stage: Test
       name: AVA Regression Tests
+      addons:
+        firefox: latest
       before_install:
       - |
         if ! git diff --name-only $TRAVIS_COMMIT_RANGE | grep -qE '(test/|examples/)'
@@ -39,7 +38,9 @@ jobs:
           exit
         fi
       script: ava -c 1 test/tests
-      env: TEST_WAIT_TIME=1000
+      env:
+      - TEST_WAIT_TIME=1000
+      - MOZ_HEADLESS=1
     - stage: Test
       name: Regression Tests Coverage Report
       script: node test/util/report.js
