added feature to extract guidance references from heading content and data attributes

--- a/scripts/coverage-report.template
+++ b/scripts/coverage-report.template
@@ -17,16 +17,16 @@
   <main>
     <h1>ARIA Roles, Properties and States used in Examples</h1>
 
-
-
     <p>
-      This page includes information on number of examples in the <a href="../">WAI-ARIA Authoring Practices</a> for each ARIA role, property and state.</a>
+      This page includes information on number of examples in the <a href="../">WAI-ARIA Authoring Practices</a> for each ARIA role, property and state.</a>  The guidance column is determined
+      by either the role, property or state being in the text content of a heading (e.g. <code>h2</code>-<code>h6</code>) or through the use of <code>
+      data-aria-roles</code> or <code>data-aria-props</code> attributes on any heading within the practices.  The <code>data-aria-roles</code> or <code>data-aria-props</code> attributes should contain a space separated list of values.  The use of the data attribute overrides the identification of roles, properties or states from the text content of a heading.  The suffix <strong>"(D)"</strong> indicates a reference came from a data attribute, otherwise the reference came from the text content of a heading.</p>
     </p>
     <ul>
       <li><a href="#csv_files">CSV Files of Role, Properties and States Coverage</a></li>
-      <li><a href="#roles_with_no_examples">Roles with no Examples</a></li>
-      <li><a href="#roles_with_one_example">Roles with One Examples</a></li>
-      <li><a href="#roles_with_more_than_one_example">Roles with More than One Example</a></li>
+      <li><a href="#roles_with_no_examples">Roles with no Guidance or Examples</a></li>
+      <li><a href="#roles_with_one_example">Roles with at Least One Guidance or Example</a></li>
+      <li><a href="#roles_with_more_than_one_example">Roles with More than One Guidance or Example</a></li>
       <li><a href="#props_with_no_examples">Properties and States with no Examples</a></li>
       <li><a href="#props_with_one_example">Properties and States with One Examples</a></li>
       <li><a href="#props_with_more_than_one_example">Properties and States with More than One Example</a></li>
@@ -41,17 +41,18 @@
     </section>
 
     <section id="roles_with_no_examples">
-      <h2 id="roles_with_no_examples_label">Roles with No Examples (<span id="roles_with_no_examples_count"></span>)</h2>
+      <h2 id="roles_with_no_examples_label">Roles with No Guidance or Examples (<span id="roles_with_no_examples_count"></span>)</h2>
       <ul id="roles_with_no_examples_ul">
       </ul>
     </section>
 
     <section id="roles_with_one_example">
-      <h2 id="roles_with_one_example_label">Roles with One Example (<span id="roles_with_one_example_count"></span>)</h2>
+      <h2 id="roles_with_one_example_label">Roles with at Least One Guidance or Example (<span id="roles_with_one_example_count"></span>)</h2>
       <table aria-labelledby="roles_with_one_example_label" class="data attributes">
         <thead>
           <tr>
             <th>Role</th>
+            <th>Guidance</th>
             <th>Example</th>
           </tr>
         </thead>
@@ -61,11 +62,12 @@
     </section>
 
     <section id="roles_with_more_than_one_example">
-      <h2 id="roles_with_more_than_one_label">Roles with More than One Example (<span id="roles_with_more_than_one_examples_count"></span>)</h2>
+      <h2 id="roles_with_more_than_one_label">Roles with More than One Guidance or Example (<span id="roles_with_more_than_one_examples_count"></span>)</h2>
       <table aria-labelledby="roles_with_more_than_one_label" class="data attributes">
         <thead>
           <tr>
             <th>Role</th>
+            <th>Guidance</th>
             <th>Examples</th>
           </tr>
         </thead>
@@ -75,17 +77,18 @@
     </section>
 
     <section id="props_with_no_examples">
-      <h2 id="props_with_no_examples_label">Properties and States with No Examples (<span id="props_with_no_examples_count"></span>)</h2>
+      <h2 id="props_with_no_examples_label">Properties and States with No Guidance or Examples (<span id="props_with_no_examples_count"></span>)</h2>
       <ul id="props_with_no_examples_ul">
       </ul>
     </section>
 
     <section id="props_with_one_example">
-      <h2 id="props_with_one_example_label">Properties and States with One Example (<span id="props_with_one_example_count"></span>)</h2>
+      <h2 id="props_with_one_example_label">Properties and States with at Least One Guidance or Example (<span id="props_with_one_example_count"></span>)</h2>
       <table aria-labelledby="props_with_one_example_label" class="data attributes">
         <thead>
           <tr>
             <th>Property or State</th>
+            <th>Guidance</th>
             <th>Example</th>
           </tr>
         </thead>
@@ -95,11 +98,12 @@
     </section>
 
     <section id="props_with_more_than_one_example">
-      <h2 id="props_with_more_than_one_label">Properties and States with More than One Example (<span id="props_with_more_than_one_examples_count"></span>)</h2>
+      <h2 id="props_with_more_than_one_label">Properties and States with More than One Guidance or Example (<span id="props_with_more_than_one_examples_count"></span>)</h2>
       <table aria-labelledby="props_with_more_than_one_label" class="data attributes">
         <thead>
           <tr>
             <th>Property or State</th>
+            <th>Guidance</th>
             <th>Examples</th>
           </tr>
         </thead>
