--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,10 @@
   "extends": "eslint:recommended",
   "env": {
     "browser": true
+  },
+  "rules": {
+    "no-unused-vars": 0,
+    "no-undef": 0,
+    "no-fallthrough": 0
   }
 }
