--- a/.vnurc
+++ b/.vnurc
@@ -8,5 +8,7 @@ An “img” element must have an “alt” attribute, except under certain cond
 # Ignoring aria-posinset and aria-setsize on role row
 Attribute “aria-posinset” not allowed on element “tr” at this point.
 Attribute “aria-setsize” not allowed on element “tr” at this point.
+# Ignoring role meter
+Bad value “meter” for attribute “role” on element “div”.
 # Deleted Section Archive
 The “longdesc” attribute on the “img” element is obsolete. Use a regular “a” element to link to the description.
