--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,6 @@
 {
   "rules": {
-    "media-feature-name-whitelist": ["forced-colors", "-ms-high-contrast"]
+    "media-feature-name-no-unknown": [true,
+    "ignoreMediaFeatureNames": ["forced-colors"] ]
   }
 }
