fix: don't glob in scripts

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:es": "eslint .",
     "lint:js": "npm run lint:es",
     "lint:html": "npm run vnu-jar",
-    "regression": "ava test/tests/*.js",
+    "regression": "ava",
     "regression-report": "node test/util/report",
     "test": "npm run lint && npm run regression",
     "vnu-jar": "java -jar node_modules/vnu-jar/build/dist/vnu.jar --errors-only --filterfile .vnurc --no-langdetect --skip-non-html *.html examples/"
