--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "glob": "^7.1.4",
     "husky": "^4.0.2",
     "lint-staged": "^9.2.0",
+    "run-node": "^1.0.0",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "stylelint": "^12.0.0",
     "stylelint-config-standard": "^20.0.0",
@@ -60,5 +61,8 @@
     "files": [
       "test/tests/*"
     ]
+  },
+  "dependencies": {
+    "npm-merge-driver": "^2.3.5"
   }
 }
